# Test_1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  file_reader.py  test_file_reader.py
.github/workflows/: build.yml
data/: sample.txt
include/: FileReaderService.h  IFileProcessor.h  IFileReader.h  LineCountProcessor.h  TextFileReader.h  WordCountProcessor.h
src/: FileReaderService.cpp  LineCountProcessor.cpp  TextFileReader.cpp  WordCountProcessor.cpp  main.cpp
